# pstack

./: .gitignore  README.md  meson.build
include/: pstack.h
src/: meson.build  sample.cpp
src/pstack/: ifc.cpp  impl.cpp  init.cpp  ipc.cpp  logging.cpp
src/pstack/inc/: impl.h  ipc.h  logging.h  macro.h  shm.h
